<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="80dip"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/linelayout_shep"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/homeWorkLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/linelayout_click_shep"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/homeWorkRbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:maxEms="1"
                android:text="@string/titleWork"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <com.example.pendemo.BrushView
        android:id="@+id/note_detail_brushview"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:focusable="false" >
    </com.example.pendemo.BrushView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_paint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/detail_pen"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_eraser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/detail_eraser"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_clear_all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="clear_all"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/detail_toolbox"
            android:textColor="@color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_leavemsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/detail_message"
            android:textColor="@color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="save"
            android:textColor="@color/black"/>
        
        <Button
            android:id="@+id/bt_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="@string/detail_submit"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_quit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="quit"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/bt_line_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="@string/line_3"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_line_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="@string/line_5"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_line_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="@string/line_7"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>